--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@
                 Improved The Bottom Line With Cash-Like Collection
               </p>
               <a href="#" class="text-grayText italic underline xl:order-1 ">Learn more</a>
-              <h3 class="font-mullish font-bold text-2xl -order-1 xl:order-1 ">Vishal Sharma</h3>
+              <h3 class="font-mullish font-bold text-2xl -order-1 xl:order-1 ">Hemant Arora</h3>
               <p class="font-mullish font-medium xl:order-1 ">Chief Finance Officer</p>
               <img
                 src="./Images/fake-company-logo.png"
